<?xml version="1.0"?>
<package format="2">
  <name>yumi_hw</name>
  <version>0.0.4</version>
  <description>Hardware interface for YuMi, for use in roscontrol</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/yumi_hw</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>abb_egm_interface</depend>
  <depend>abb_librws</depend>
  <depend>cmake_modules</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>kdl_parser</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>simple_message</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
